--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
 	"dependencies": {
 		"lexical": "~0.11.0",
 		"lexical-solid": "^0.6.0",
-		"solid-js": "^1.7.7",
-		"yjs": "^13.6.6"
+		"solid-js": "^1.7.7"
 	}
 }
